add submodule jvm diagnostics